# NAStreaming

./: .gitignore  Cargo.toml  Config.toml  README.md
.github/workflows/: build.yml  deploy.yml
crates/api/: Cargo.toml
crates/api/src/: app_data.rs  config.rs  error.rs  main.rs  update.rs
crates/api/src/routes/: home.rs  init.rs  mod.rs
crates/api/src/routes/entry/: add.rs  delete.rs  delete_full.rs  edit.rs  info.rs  mod.rs  search.rs  update_metadata.rs
crates/api/src/routes/episode/: add.rs  delete.rs  delete_full.rs  info.rs  mod.rs
crates/api/src/routes/file/: get_dir.rs  link_entry.rs  list.rs  list_unlinked.rs  mod.rs  overview_unlinked.rs  set_entry.rs  set_episode.rs
crates/api/src/routes/lib/: add.rs  delete.rs  edit.rs  list.rs  mod.rs
crates/api/src/routes/management/: check_for_update.rs  mod.rs  restart.rs  stop.rs
crates/api/src/routes/metadata_provder/: link_entry.rs  list.rs  mod.rs  overview.rs  providers.rs  search.rs
crates/api/src/routes/services/: dispatch.rs  list.rs  mod.rs  state.rs
crates/api/src/routes/user/: create.rs  edit.rs  info.rs  mod.rs  refresh.rs  sign_in.rs
crates/api/src/services/: auth.rs  metadata.rs  mod.rs  scan.rs
crates/fill-db/: Cargo.toml
crates/fill-db/src/: main.rs
crates/hls/: Cargo.toml
crates/hls/src/: main.rs
crates/metadata-provider/: Cargo.toml
crates/metadata-provider/src/: fetcher.rs  lib.rs  search.rs
crates/metadata-providers/anemyfr/: Cargo.toml
crates/metadata-providers/anemyfr/src/: lib.rs
crates/metadata-providers/anidb/: Cargo.toml
crates/metadata-providers/anidb/src/: info.rs  lib.rs  search.rs
crates/metadata-providers/anilist/: Cargo.toml
crates/metadata-providers/anilist/src/: info.rs  lib.rs  search.rs
crates/metadata-providers/anime-characters-database/: Cargo.toml
crates/metadata-providers/anime-characters-database/src/: lib.rs
crates/metadata-providers/anime-news-network/: Cargo.toml
crates/metadata-providers/anime-news-network/src/: lib.rs
crates/metadata-providers/anime-planet/: Cargo.toml
crates/metadata-providers/anime-planet/src/: lib.rs
crates/metadata-providers/animecountdown/: Cargo.toml
crates/metadata-providers/animecountdown/src/: lib.rs
crates/metadata-providers/animedb-jp/: Cargo.toml
crates/metadata-providers/animedb-jp/src/: lib.rs
crates/metadata-providers/anisearch/: Cargo.toml
crates/metadata-providers/anisearch/src/: lib.rs
crates/metadata-providers/becausemoe/: Cargo.toml
crates/metadata-providers/becausemoe/src/: lib.rs
crates/metadata-providers/duckduckgo/: Cargo.toml
crates/metadata-providers/duckduckgo/src/: lib.rs
crates/metadata-providers/fanart-tv/: Cargo.toml
crates/metadata-providers/fanart-tv/src/: info.rs  lib.rs  search.rs
crates/metadata-providers/fandom/: Cargo.toml
crates/metadata-providers/fandom/src/: lib.rs  search.rs
crates/metadata-providers/gamdb/: Cargo.toml
crates/metadata-providers/gamdb/src/: lib.rs
crates/metadata-providers/imdb/: Cargo.toml
crates/metadata-providers/imdb/src/: lib.rs
crates/metadata-providers/is-this-dubbed/: Cargo.toml
crates/metadata-providers/kitsu/: Cargo.toml
crates/metadata-providers/kitsu/src/: info.rs  lib.rs  search.rs
crates/metadata-providers/livechart/: Cargo.toml
crates/metadata-providers/livechart/src/: lib.rs
crates/metadata-providers/myanimelist/: Cargo.toml
crates/metadata-providers/myanimelist/src/: lib.rs
crates/metadata-providers/notify-moe/: Cargo.toml
crates/metadata-providers/notify-moe/src/: lib.rs
crates/metadata-providers/randomanime/: Cargo.toml
crates/metadata-providers/randomanime/src/: lib.rs
crates/metadata-providers/rottentomatoes/: Cargo.toml
crates/metadata-providers/rottentomatoes/src/: lib.rs
crates/metadata-providers/simkl/: Cargo.toml
crates/metadata-providers/simkl/src/: lib.rs
crates/metadata-providers/themoviedb/: Cargo.toml
crates/metadata-providers/themoviedb/src/: info.rs  lib.rs  search.rs
crates/metadata-providers/thetvdb/: Cargo.toml
crates/metadata-providers/thetvdb/src/: info.rs  lib.rs  login.rs  search.rs
crates/metadata-providers/trakt/: Cargo.toml
crates/metadata-providers/trakt/src/: lib.rs
crates/models/: Cargo.toml  ref.excalidraw
crates/models/src/: entry.rs  file_group.rs  files.rs  lib.rs  lists.rs  metadata.rs  scan_groups.rs  user.rs  utils.rs
crates/read-once-memory/: Cargo.toml
crates/read-once-memory/src/: main.rs
crates/storage_finder/: Cargo.toml
crates/storage_finder/src/: episode_guessing.rs  lib.rs  mod.rs  parser.rs  path_tree.rs  reg.rs  resolution.rs  segments.rs  typ.rs
crates/storage_finder/src/old/: parser.rs  typ.rs
crates/storage_finder/src/suffixes/: cut.rs  kind.rs  mod.rs  threed.rs  typ.rs
crates/structures/: Cargo.toml
crates/structures/src/: init.rs  lib.rs  link.rs  search.rs  services.rs
crates/structures/src/entry/: mod.rs  search.rs
crates/structures/src/episodes/: mod.rs
crates/structures/src/file/: mod.rs
crates/structures/src/metadata_provider/: mod.rs
crates/structures/src/movie_lib/: mod.rs
crates/structures/src/user/: mod.rs
docs/: book.toml
docs/src/: API.md  CodecSupport.md  FAQ.md  SUMMARY.md  StreamingConcept.md
docs/src/Server/: Libraries.md  Plugins.md
docs/src/Server/Config/: HardwareAcceleration.md  readme.md
docs/src/Server/FileScanning/: Metadata.md  Movie.md  Series.md  readme.md
docs/src/Setup/: Migration.md
scripts/: README.md  build  fill-db.py  generate-scrub  generate-scrub.py  migrate_from_plex.py  migrate_from_plex.sh  run.sh  serve_db  serve_docs
