[workspace.package]
version = "0.1.0" #
edition = "2021"

[workspace]
members = ["crates/api", "crates/models", "crates/structures"]

resolver = "2"

[workspace.dependencies]
serde = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
log = "0.4.26"
actix-web = "4"
env_logger = "0.11.7"
actix-cors = "0.7.1"

schemars = { package = "apistos-schemars", version = "0.8" }
apistos = "0.4"
