[package]
name = "api"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
toml.workspace = true
serde = {workspace = true, features = ["derive"]}
log.workspace = true
actix-web.workspace = true
env_logger.workspace = true
actix-cors.workspace = true
schemars.workspace = true
apistos = { workspace = true, features = ["swagger-ui", "rapidoc", "redoc", "scalar", "multipart", "actix-web-grants"] }
structures = {workspace = true, features = ["openapi"]}
models.workspace = true
jsonwebtoken.workspace = true
bcrypt.workspace = true
actix-web-httpauth.workspace = true
actix-web-grants.workspace = true
rand.workspace = true
self_update.workspace = true
chrono.workspace = true
storage-finder.workspace = true
metadata-provider.workspace = true
anemyfr.workspace = true
anidb.workspace = true
anilist.workspace = true
anime-characters-database.workspace = true
anime-planet.workspace = true
anime-news-network.workspace = true
animecountdown.workspace = true
animedb-jp.workspace = true
anisearch.workspace = true
becausemoe.workspace = true
fanart-tv.workspace = true
fandom.workspace = true
gamdb.workspace = true
imdb.workspace = true
kitsu.workspace = true
livechart.workspace = true
myanimelist.workspace = true
notify-moe.workspace = true
randomanime.workspace = true
rottentomatoes.workspace = true
simkl.workspace = true
themoviedb.workspace = true
thetvdb.workspace = true
trakt.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
