[package]
name = "metadata-provider"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest = {version="0.12", features = ["json", "gzip"]}
http = "1.3"
bytes = "1.10"
scraper.workspace = true
serde.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tokio = {workspace = true, features = ["sync"]}
