[package]
name = "models"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
structures = {workspace = true}
surrealdb.workspace = true
serde = { workspace = true, features = ["derive"] }
storage-finder = {workspace = true}
async-trait = "0.1.88"
futures = "0.3.31"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
