[package]
name = "storage-finder"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = {  workspace=true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace=true, features = ["derive"] }
bigdecimal = { version = "0.4.7", features = ["serde"] }
async-recursion.workspace=true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
