[package]
name = "structures"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
serde = {workspace = true, features = ["derive"]}
schemars = { workspace = true, optional=true }
apistos = { workspace = true, optional=true }

[features]
openapi = ["dep:schemars", "dep:apistos"]
