[package]
name = "thetvdb"
version.workspace = true
edition.workspace = true

[dependencies]
metadata-provider = {workspace = true}
serde_json = "1"
serde = {workspace = true, features = ["derive"]}
base64.workspace = true
tokio = {workspace = true, features = ["sync"]}


[dev-dependencies]
tokio = {workspace = true, features = ["macros", "rt-multi-thread"]}
toml.workspace = true
